# rag_pet_project

./: .gitignore  AGENTS.md  COMMANDS.md  README.md  pyproject.toml
configs/: api.yaml  eval.yaml  model.yaml  retrieval.yaml
data/eval/: README.md  ragas_synthetic.jsonl  retrieval_gt.jsonl  retrieval_markdown_gt.jsonl  retrieval_sources_gt.jsonl
docs/adr/: 0000-local-first-rag-assistant.md  0001-use-vllm-for-ragas-synthetic-datasets.md  0002-keep-ingest-text-normalization-simple.md  0003-keep-provider-specific-logic-behind-adapters.md
scripts/: build_markdown_gt.py  build_ragas_dataset.py  index.py  ingest.py  run_eval.py  serve.py  ui.py
skills/api-ui-delivery/: SKILL.md
skills/detailed-explainer/: SKILL.md
skills/eval-and-benchmark/: SKILL.md
skills/llm-backend/: SKILL.md
skills/project-architect/: SKILL.md
tests/: test_api_config.py  test_api_routes.py  test_api_service.py  test_build_markdown_gt_script.py  test_build_ragas_dataset_script.py  test_embeddings_embedder.py  test_embeddings_factory.py  test_eval_retrieval_metrics.py  test_eval_retrieval_runner.py  test_fastapi_tutorial_ingest.py  test_index_script.py  test_ingest_script.py  test_llm_factory.py  test_llm_pipeline.py  test_llm_postprocess.py  test_llm_prompt_builder.py  test_llm_service.py  test_retrieval_context_builder.py  test_retrieval_factory.py  test_retrieval_pipeline.py  test_retrieval_reranker.py  test_retrieval_retriever.py  test_run_eval_script.py  test_runtime_device.py  test_ui_client.py  test_ui_config.py  test_vectordb_db.py  test_vectordb_indexing.py  test_vllm_backend.py
(+46 files in other folders)
