[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-local-assistant"
version = "0.1.0"
description = "Local-first RAG assistant for ingestion, indexing, retrieval, generation, API/UI delivery, and evaluation."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Vyacheslav" },
]
dependencies = [
  "fastapi>=0.110",
  "gradio>=4.0",
  "httpx>=0.27",
  "langchain-text-splitters>=1.1",
  "llama-cpp-python>=0.2",
  "llama-index-core>=0.10",
  "llama-index-embeddings-huggingface>=0.2",
  "llama-index-vector-stores-qdrant>=0.2",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "qdrant-client>=1.9",
  "scikit-learn>=1.4",
  "sentence-transformers>=2.7",
  "torch>=2.2",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
eval = [
  "datasets>=2.19",
  "ragas>=0.2",
]

[project.scripts]
rag-ingest = "scripts.ingest:main"
rag-index = "scripts.index:main"
rag-eval = "scripts.run_eval:main"
rag-serve = "scripts.serve:main"
rag-ui = "scripts.ui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
